k3s/s3gw-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3gw-service
  namespace: s3gw-system
spec:
  selector:
    app.aquarist-labs.io/name: s3gw
  ports:
    - name: s3gw-service-http
      protocol: TCP
      port: 80
      targetPort: s3gw-http
