k3s/s3gw-dev.yaml
# s3gw-dev.yaml - setup a k3s cluster with longhorn and s3gw
# Copyright 2022 SUSE, LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# This file was auto-generated by generate-spec.sh on 2022/02/09 12:05:49 UTC
#

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: longhorn-system
spec:
  stripPrefix:
    prefixes:
      - /longhorn
    forceSlash: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: longhorn-system-stripprefix@kubernetescrd
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /longhorn
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
---
apiVersion: v1
kind: Namespace
metadata:
  name: s3gw-system
---
apiVersion: v1
kind: Pod
metadata:
  name: s3gw
  namespace: s3gw-system
  labels:
    app.aquarist-labs.io/name: s3gw
spec:
  containers:
    - name: s3gw
      image: localhost/s3gw:latest
      imagePullPolicy: Never
      volumeMounts:
      - name: s3gw-lh-store
        mountPath: /data
      ports:
        - containerPort: 7480
          name: s3gw-http
  volumes:
  - name: s3gw-lh-store
    persistentVolumeClaim:
      claimName: s3gw-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: s3gw-service
  namespace: s3gw-system
spec:
  selector:
    app.aquarist-labs.io/name: s3gw
  ports:
    - name: s3gw-service-http
      protocol: TCP
      port: 80
      targetPort: s3gw-http
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: s3gw-system
spec:
  stripPrefix:
    prefixes:
      - /s3gw
    forceSlash: false
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3gw-ingress
  namespace: s3gw-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: s3gw-system-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /s3gw
            pathType: Prefix
            backend:
              service:
                name: s3gw-service
                port:
                  number: 80
